# query-data-predictor

./: .gitignore  Bugs-to-write-up.md  Implementation_notes.md  README.md  config.yaml  extract_table_data.py  generate_publication_figures.py  paper_artifact_manifest.yaml  pyproject.toml  run_decay_sweep.sh  syndata.py  test_enhanced_experiments.py  test_k_metrics.py  test_sensitivity_specificity.py
configs/: performance_optimized.yaml
data/datasets/: metadata.csv  query_prediction_session_11015.pkl  query_prediction_session_11016.pkl  query_prediction_session_11017.pkl  query_prediction_session_11018.pkl  query_prediction_session_11019.pkl  query_prediction_session_11022.pkl  query_prediction_session_11023.pkl  query_prediction_session_11025.pkl  query_prediction_session_11026.pkl  query_prediction_session_11027.pkl  query_prediction_session_11028.pkl  query_prediction_session_11029.pkl  query_prediction_session_11031.pkl  query_prediction_session_11032.pkl  query_prediction_session_11033.pkl  query_prediction_session_11035.pkl  query_prediction_session_11036.pkl  query_prediction_session_11037.pkl  query_prediction_session_11039.pkl  (+421 more)
experiments/: ENHANCEMENT_SUMMARY.md  FIX_SUMMARY.md  GAP_ANALYSIS_COMPLETE.md  GAP_ANALYSIS_SUMMARY.md  METRICS_ENHANCEMENT_SUMMARY.md  README_Enhanced_System.md  README_Multi_Session_Experiments.md  README_Publication_Visualizations.md  README_Visualizations.md  VISUALIZATION_SUMMARY.md  association_recommender_experiments.py  build_csv_dataset.py  build_simba_dataset.py  domain_specific_experiments.py  enhanced_experiment_runner.py  experiment_analyzer.py  experiment_collector.py  experiment_suggestions.py  integration_example.py  json_query_statistics.py  multi_session_config.yaml  old_recommender_experiments.py  recency_effect_experiment.py  recommender_experiments.py  test_query_expansion_recommender.py
scripts/: count_lines.sh  gather_sessions.py  memory_monitor.sh  paper_env.sh  reproduce_figures.sh  reproduce_tables.sh  rerun_paper_experiments.sh  run_experiment.py  split_sessions.py  test_performance_recommenders.py  verify_artifact.sh
tests/: conftest.py  fixtures.py  test_analysis_simple.py  test_association_evaluator.py  test_association_rules.py  test_config_manager.py  test_dataloader.py  test_dataset_creator.py  test_discretizer.py  test_interestingness.py  test_metrics.py  test_query_result_sequence.py  test_query_runner.py  test_sdss_csv_import.py  test_sdss_json_import.py  test_summariser.py  test_summary_evaluator.py  test_tuple_reccomender.py  test_tuple_recommender.py  test_tuple_recommender_performance.py
tools/: generate_benchmark.py  rewrite_query_sequences.py
(+1068 files in other folders)
