[project]
name = "query-data-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Adams", email = "david@dadams2.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "dash>=3.1.1",
    "dotenv>=0.9.9",
    "duckdb>=1.2.2",
    "joblib>=1.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "mlxtend>=0.23.4",
    "nbformat>=5.10.4",
    "numexpr>=2.10.2",
    "pandas>=2.2.3",
    "plotly>=6.2.0",
    "polars>=1.29.0",
    "psycopg2>=2.9.10",
    "pyarrow>=20.0.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "sqlparse>=0.5.3",
]

[project.scripts]
query-data-predictor = "query_data_predictor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.36.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "scalene>=1.5.51",
]
